--- a/packages.config
+++ b/packages.config
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.DocAsCode.YamlSerialization" version="2.56.3" targetFramework="net481" />
   <package id="MySql.Data" version="8.1.0" targetFramework="net481" />
   <package id="Google.Protobuf" version="3.21.9" targetFramework="net481" />
   <package id="K4os.Compression.LZ4" version="1.3.5" targetFramework="net481" />
   <package id="K4os.Compression.LZ4.Streams" version="1.3.5" targetFramework="net481" />
   <package id="K4os.Hash.xxHash" version="1.0.8" targetFramework="net481" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net481" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net481" />
   <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net481" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net481" />
   <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net481" />
@@ -15,5 +17,7 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net481" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net481" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net481" />
+  <package id="YamlDotNet" version="13.7.1" targetFramework="net481" />
+  <package id="YamlDotNet.Signed" version="4.2.2" targetFramework="net481" />
   <package id="ZstdSharp.Port" version="0.7.1" targetFramework="net481" />
 </packages>
